Navbar fixed, alignment and icon positioning

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,19 +1,14 @@
 .navbar {
   background-color: #333;
   height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* position: fixed; */
 }
 
 .nav-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 80px;
-  max-width: 1500px;
 }
 
 .main-container{
@@ -56,13 +51,16 @@
 
 .nav-item {
   line-height: 50px;
-  margin-right: 1rem;
-  align-items: center;
+  margin: 1rem;
+  position: relative;
 }
 
 .nav-item .icon{
+  font-size: 20px;
   margin-right: 10px;
-  font-size: 18px;
+  position: sticky;
+  left: -20px;
+  top: 27px;
 }
 
 .nav-item:after{
@@ -89,7 +87,7 @@
   display: none;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 800px) {
    .nav-logo{
     font-size: 1.2rem;
   }
@@ -99,10 +97,7 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
-
-
-  
+@media screen and (max-width: 1000px) {  
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -138,7 +133,7 @@
   .nav-icon {
     display: block;
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 0;
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
@@ -148,3 +143,16 @@
 }
 
 /* .nav-logo{} */
+
+
+@media screen and (min-width: 800px) {
+   .nav-logo{
+    font-size: 1.1rem;
+    word-wrap: break-word;
+  }
+
+  .nav-item{
+    font-size: 0.9rem;
+  }
+}
+
